# 42-minishell

./: .gitignore  Makefile  minishell 2
docs/compilerbook/: main.c  memo.md
docs/example/: access.c  chdir.c  environ.c  fork.c  perror.c  pipe.c  pipex.c  readline.c  stat.c  unlink.c  waitpid.c
docs/lsh/: main.c
example/: fork.c  getcwd.c  isatty.c  kill.c  opendir.c  pipe.c  sigaction.c  strerr.c
includes/: analyzer.h  builtin.h  env.h  execution.h  executor.h  expansion.h  lexer.h  minishell.h  parser.h  shell_var.h  struct.h  utils.h
lib/libft/: Makefile
lib/libft/includes/: libft.h
lib/libft/src/ctype/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_tolower.c  ft_toupper.c
lib/libft/src/io/: ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putnchar_fd.c  ft_putstr_fd.c  get_next_line.c
lib/libft/src/list/: ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c
lib/libft/src/mem/: ft_bzero.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c
lib/libft/src/stdlib/: ft_atoi.c  ft_calloc.c  ft_itoa.c
lib/libft/src/str/: ft_split.c  ft_split_free.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strjoin_free.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strndup.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c
src/analyzer/: convert_to_expression_tree.c  lexer.c  node_utils.c  parser.c  validate_line.c
src/builtin/: builtin_cd.c  builtin_cd2.c  builtin_echo.c  builtin_env.c  builtin_exit.c  builtin_export.c  builtin_pwd.c  builtin_unset.c  write_in_process.c
src/convert/: convert_to_expression_tree.c
src/env/: get_env_value.c  get_environ.c  init_env.c  init_envlist.c  init_sh_var.c  set_env_value.c  sort_env_list.c
src/execution/: convert_to_expression_list.c  evaluate_expression.c  exec_builtin.c  exec_child.c  exec_processes.c  exec_single_process.c  execution.c  expansion_heredoc.c  get_fullpath_cmd.c  handle_fd.c  safe_func.c  set_heredoc.c  set_heredoc_utils.c  set_io_params.c  set_redirections_and_commands.c
src/executor/: exec_builtin.c  exec_child.c  exec_processes.c  exec_single_builtin.c  exec_single_process.c  executor.c  get_cmd_path.c  get_fullpath_cmd.c  handle_fd.c  set_command.c  set_io_and_commands.c  set_io_params.c
src/expander/: convert_to_token_list.c  expand_token.c  expand_wildcard.c  expander.c  extract_word.c  filename_expansion.c  get_expansion_list.c  match_files.c  match_given_pattern.c  match_pattern.c  sorted_env_list.c  sorted_expd_list.c
src/expansion/: convert_to_token_list.c  expansion.c  filename_expansion.c  get_expansion_list.c  match_given_pattern.c  memo.md
src/heredoc/: expander_heredoc.c  expansion_heredoc.c  set_heredoc.c  set_heredoc_utils.c
src/lexer/: lexer.c  lexer.h  lexer_utils.c  main.c
src/main/: main.c
src/parser/: memo.md  parser.c
src/utils/: delete_content.c  delete_content2.c  error_handler.c  handle_signal.c  safe_func.c  wrapper.c  wrapper_str.c
test/: CMakeLists.txt  main.c  main.cpp  main00.cpp  main01.cpp  main02.cpp  test.sh
test/gtest/: CMakeLists.txt  execution.cpp  main00.cpp  main01.cpp  main02.cpp
test/shtest/: command.txt  execution.sh  main.c
